--- a/mobile/package.json
+++ b/mobile/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/native": "^5.5.1",
     "@react-navigation/stack": "^5.5.1",
     "@types/node": "^14.0.13",
+    "axios": "^0.19.2",
     "expo": "~37.0.3",
     "expo-constants": "~9.0.0",
     "expo-font": "~8.1.0",
