--- a/server/package.json
+++ b/server/package.json
@@ -10,9 +10,11 @@
     "knex:migrate": "knex migrate:latest"
   },
   "dependencies": {
+    "@types/multer": "^1.4.3",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "knex": "^0.21.1",
+    "multer": "^1.4.2",
     "sqlite3": "^4.2.0"
   },
   "devDependencies": {
